[gd_scene load_steps=9 format=3 uid="uid://cgqrdupw1vq4r"]

[ext_resource type="PackedScene" uid="uid://dg8b4ukda3bro" path="res://scenes/Book/Book.tscn" id="1_cvklj"]
[ext_resource type="Script" path="res://scenes/Rest/SeasonalStoryLabel.gd" id="2_vf1xp"]
[ext_resource type="Script" path="res://scenes/Rest/RestPageTwo.gd" id="3_icqye"]
[ext_resource type="Texture2D" uid="uid://ddgebjyrh23qh" path="res://assets/images/fly.png" id="4_ivuei"]
[ext_resource type="Script" path="res://scenes/Rest/PScore.gd" id="4_uv0bo"]
[ext_resource type="Texture2D" uid="uid://bd7totvr13qu2" path="res://assets/images/heart icon.png" id="5_yenvh"]
[ext_resource type="Script" path="res://scenes/Rest/EScore.gd" id="6_jxxo4"]

[sub_resource type="LabelSettings" id="LabelSettings_14b70"]
font_color = Color(0, 0, 0, 1)

[node name="RestBook" instance=ExtResource("1_cvklj")]
StoryDesc = "You find a moment of peace on an unoccupied lily pad.  "
ButtonOneText = "Rest (+HP)"
ButtonTwoText = "Eat Flies (+ 5 Max HP, - 100 Flies)"
ButtonThreeText = "Toss a stone (Remove one disc)"
OptOneResult = "You spend some time resting and recovering."
OptOneConsequence = "You heal some health"
OptTwoResult = "You feast on a collection of flies. They taste sticky and sour."
OptTwoConsequence = "You gain some max health, but lose many flies"
OptThreeResult = "Select a disc to discard"
OptThreeConsequence = "This disc will be permanently lost"

[node name="Story" parent="PageOne" index="0"]
offset_bottom = 121.0
text = "You find a moment of peace on an unoccupied lily pad.  "

[node name="FallStory" type="Label" parent="PageOne" index="1"]
visible = false
layout_mode = 0
offset_left = 131.0
offset_top = 135.0
offset_right = 501.0
offset_bottom = 191.0
text = "The strong gusts make you uneasy, you don't think you can open your fly pouch without losing the contents."
label_settings = SubResource("LabelSettings_14b70")
autowrap_mode = 2
script = ExtResource("2_vf1xp")
season = 2

[node name="SpringStory" type="Label" parent="PageOne" index="2"]
visible = false
layout_mode = 0
offset_left = 131.0
offset_top = 135.0
offset_right = 501.0
offset_bottom = 191.0
text = "You bask in the bright colors of the spring flowers, though your thoughts soon turn back to revenge against Anole."
label_settings = SubResource("LabelSettings_14b70")
autowrap_mode = 2
script = ExtResource("2_vf1xp")

[node name="WinterStory" type="Label" parent="PageOne" index="3"]
visible = false
layout_mode = 0
offset_left = 131.0
offset_top = 135.0
offset_right = 501.0
offset_bottom = 191.0
text = "A bitter, biting cold cleaves down to your bones.  Resting in this cold will be very difficult."
label_settings = SubResource("LabelSettings_14b70")
autowrap_mode = 2
script = ExtResource("2_vf1xp")
season = 3

[node name="SummerStory" type="Label" parent="PageOne" index="4"]
visible = false
layout_mode = 0
offset_left = 131.0
offset_top = 135.0
offset_right = 501.0
offset_bottom = 191.0
text = "The warm summer air feels nice on your moist skin, but your stomach begins to rumble. You'd really like to have something to eat!"
label_settings = SubResource("LabelSettings_14b70")
autowrap_mode = 2
script = ExtResource("2_vf1xp")
season = 1

[node name="Prompt" parent="PageOne" index="5"]
offset_left = 598.0
offset_top = 96.0
offset_right = 978.0
offset_bottom = 141.0

[node name="Option2Btn" parent="PageOne" index="7"]
offset_top = 274.0
offset_bottom = 327.0

[node name="Option3Btn" parent="PageOne" index="8"]
offset_top = 356.0
offset_bottom = 409.0

[node name="PageTwo" parent="." index="2"]
script = ExtResource("3_icqye")

[node name="Result" parent="PageTwo" index="0"]
offset_left = 132.0
offset_top = 58.0
offset_right = 502.0
offset_bottom = 474.0

[node name="Consequence" parent="PageTwo" index="1"]
offset_left = 616.0
offset_top = 106.0
offset_right = 958.0
offset_bottom = 151.0
autowrap_mode = 2

[node name="LeaveBtn" parent="PageTwo" index="2"]
offset_left = 610.0
offset_top = 332.0
offset_right = 955.0
offset_bottom = 385.0

[node name="DiscSelection" type="ScrollContainer" parent="PageTwo" index="3"]
visible = false
clip_contents = false
custom_minimum_size = Vector2(350, 500)
layout_mode = 0
offset_left = 130.0
offset_top = 182.0
offset_right = 530.0
offset_bottom = 682.0

[node name="GridContainer" type="GridContainer" parent="PageTwo/DiscSelection" index="0"]
custom_minimum_size = Vector2(350, 500)
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 3

[node name="PScore" type="Label" parent="." index="3"]
offset_left = 146.0
offset_top = 545.0
offset_right = 257.0
offset_bottom = 633.0
theme_override_colors/font_color = Color(0, 0.0823529, 1, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 64
text = "P: 0"
script = ExtResource("4_uv0bo")

[node name="TextureRect" type="TextureRect" parent="PScore" index="0"]
layout_mode = 0
offset_left = -45.0
offset_top = 27.0
offset_right = -5.0
offset_bottom = 67.0
texture = ExtResource("4_ivuei")

[node name="EScore" type="Label" parent="." index="4"]
offset_left = 643.0
offset_top = 555.0
offset_right = 751.0
offset_bottom = 643.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "E: 0"
script = ExtResource("6_jxxo4")

[node name="TextureRect" type="TextureRect" parent="EScore" index="0"]
layout_mode = 0
offset_left = -52.0
offset_top = 27.0
offset_right = -12.0
offset_bottom = 67.0
texture = ExtResource("5_yenvh")

[connection signal="pressed" from="PageOne/Option1Btn" to="PageTwo" method="_on_option_1_btn_pressed"]
[connection signal="pressed" from="PageOne/Option2Btn" to="PageTwo" method="_on_option_2_btn_pressed"]
[connection signal="pressed" from="PageOne/Option3Btn" to="PageTwo" method="_on_option_3_btn_pressed"]
[connection signal="visibility_changed" from="PageTwo" to="PageTwo" method="_on_visibility_changed"]
